--- a/V3.0/index.html
+++ b/V3.0/index.html
@@ -30,11 +30,11 @@
     <script src="ui/script/cache/header_fbf19b58629fabeb2e164fd4a4a316ce.js?m=fbf19b58629fabeb2e164fd4a4a316ce"></script>
 
     <!-- VAJALIKUD KLAVERI JAOKS -->
-    <link rel="stylesheet" href="https://resentful.tk/V3.0/styles/cardStyle.css">
-    <link rel="stylesheet" href="https://resentful.tk/V3.0/styles/modal.css">
-    <script src="https://resentful.tk/V3.0/usedContent/soundfont-player.js"></script>
-    <script src="https://resentful.tk/V3.0/scripts/notes.js"></script>
-    <script src="https://resentful.tk/V3.0/scripts/constants.js"></script>
+    <link rel="stylesheet" href="https://resentful.eu/V3.0/styles/cardStyle.css">
+    <link rel="stylesheet" href="https://resentful.eu/V3.0/styles/modal.css">
+    <script src="https://resentful.eu/V3.0/usedContent/soundfont-player.js"></script>
+    <script src="https://resentful.eu/V3.0/scripts/notes.js"></script>
+    <script src="https://resentful.eu/V3.0/scripts/constants.js"></script>
     <!-- VAJALIKUD KLAVERI JAOKS -->
 
     <script>
@@ -578,13 +578,13 @@ Direktor: +372 767 9617</span><br/>
 <script src="ui/template/valgaMuusikakool/jscript/ui.js?m=31303020283238393929" type="text/javascript"></script>
 
 <!-- VAJALIKUD KLAVERI JAOKS -->
-<script src="https://resentful.tk/V3.0/scripts/donatorCards.js"></script>
+<script src="https://resentful.eu/V3.0/scripts/donatorCards.js"></script>
 
-<script src="https://resentful.tk/V3.0/scripts/canvasObject.js"></script>
-<script src="https://resentful.tk/V3.0/scripts/inputLogic.js"></script>
+<script src="https://resentful.eu/V3.0/scripts/canvasObject.js"></script>
+<script src="https://resentful.eu/V3.0/scripts/inputLogic.js"></script>
 
-<script src="https://resentful.tk/V3.0/scripts/sound.js"></script>
-<script src="https://resentful.tk/V3.0/scripts/modalLogic.js"></script>
+<script src="https://resentful.eu/V3.0/scripts/sound.js"></script>
+<script src="https://resentful.eu/V3.0/scripts/modalLogic.js"></script>
 <!-- VAJALIKUD KLAVERI JAOKS -->
 
 </body>
